# phonect

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  flake.nix  package.nix  phonect-service.nix  pyproject.toml  shell.nix
.github/workflows/: android-release.yml  android.yml  nix.yml  tests.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/phonect/android/biometric/: BiometricHandler.kt
android/app/src/main/java/com/phonect/android/crypto/: CryptoManager.kt
android/app/src/main/java/com/phonect/android/logging/: LogManager.kt
android/app/src/main/java/com/phonect/android/model/: HandshakeModels.kt
android/app/src/main/java/com/phonect/android/network/: InFlightAttemptRegistry.kt  PhonectNetworkService.kt  ProtocolHandler.kt
android/app/src/main/java/com/phonect/android/ui/: MainActivity.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: file_paths.xml
android/app/src/test/java/com/phonect/android/model/: HandshakeModelsTest.kt
scripts/: e2e_cli_test.py  e2e_test.sh
src/phonect/: __init__.py  cli.py  config.py  crypto.py  daemon.py  handshake.py  protocol.py  state.py  tui.py
tests/: test_cli.py  test_daemon.py  test_handshake.py  test_protocol_security.py  test_state.py
(+1 files in other folders)
