[project]
name = "phonect"
version = "0.1.0"
description = "P2P Biometric Laptop Unlock — разблокировка Linux ноутбука отпечатком пальца с Android"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=41.0.0",
]

[project.scripts]
phonect = "phonect.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
