[project]
name = "phonect"
version = "0.3.0"
description = "P2P Biometric Laptop Unlock — разблокировка Linux ноутбука отпечатком пальца с Android"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=41.0.0",
    "dbus-next>=0.2.3",
]

[project.scripts]
phonect = "phonect.cli:main"

[project.optional-dependencies]
tui = [
    "textual>=0.52.0",
    "qrcode>=7.4",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
where = ["src"]
