[project]
name = "phonect"
version = "0.4.6"
description = "P2P Biometric Laptop Unlock — разблокировка Linux ноутбука отпечатком пальца с Android"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=41.0.0",
    "dbus-next>=0.2.3",
]

[project.scripts]
phonect = "phonect.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
where = ["src"]
